--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokemon Application</title>
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header class="nav-bar flex flex-column">
@@ -49,6 +49,8 @@
           </div>
         </div>
       </section>
+      <hr class="section-break" />
+      <section id="compareSection" class="compareSection"></section>
     </main>
 
     <footer></footer>
