--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
           </div>
         </div>
         <div class="displayWrapper flex">
-          <button id="compareBtn" class="primary-btn display-none">
-            Compare Pokemon
-          </button>
+          <div class="flex flex-row btn-group">
+            <button id="compareBtn" class="primary-btn display-none">
+              Compare Pokemon
+            </button>
+            <button id="toBattleBtn" class="primary-btn display-none">
+              Battle!
+            </button>
+          </div>
           <div class="displayedPokemon flex">
             <img src="./images/placeholder-bg-lg.svg" alt="placeholder image" />
           </div>
@@ -51,6 +56,11 @@
       </section>
       <hr class="section-break" />
       <section id="compareSection" class="compareSection"></section>
+      <hr class="section-break battle-break display-none" />
+      <h2 id="battleStatus"></h2>
+      <section id="battleSection" class="battleSection flex flex-column">
+        <!-- <div class="playersAndStats"></div> -->
+      </section>
     </main>
 
     <footer></footer>
