--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-      <section class="selectItemsSection flex">
+      <section id="topSection" class="selectItemsSection flex">
         <div class="dropdownWrapper flex flex-column">
           <div class="flex flex-column dropdown">
             <label for="pokemonSelect1">Choose a Pokemon</label>
@@ -58,9 +58,10 @@
       <section id="compareSection" class="compareSection"></section>
       <hr class="section-break battle-break display-none" />
       <h2 id="battleStatus"></h2>
-      <section id="battleSection" class="battleSection flex flex-column">
-        <!-- <div class="playersAndStats"></div> -->
-      </section>
+      <section
+        id="battleSection"
+        class="battleSection flex flex-column"
+      ></section>
     </main>
 
     <footer></footer>
