--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <body>
     <header class="nav-bar flex flex-column">
       <div class="wrapper flex flex-row">
-        <img src="" alt="logo" class="site-logo" />
-        <span class="site-title">Pokemon Application</span>
+        <img src="./images/pokemon-logo.svg" alt="logo" class="site-logo" />
+        <span class="site-title">Pokemon!</span>
       </div>
-      <hr />
     </header>
 
     <main>
@@ -54,7 +53,6 @@
           </div>
         </div>
       </section>
-      <hr class="section-break" />
       <section id="compareSection" class="compareSection"></section>
       <hr class="section-break battle-break display-none" />
       <h2 id="battleStatus"></h2>
